--- a/index.html
+++ b/index.html
@@ -669,7 +669,7 @@ details + h3 {
 																					<div <H1rohrreinigung-harrer</H1> >
 																<a href="#">
  								</a>
-							</div><!-- END #logo -->
+							</div><Rohrreinigung Harrer>
 																				</div>
 
 						<div class="header-box-right">
