--- a/index.html
+++ b/index.html
@@ -662,6 +662,7 @@ details + h3 {
 					<div id="header">
 						<div class="header-box-left">
 							<div class="textwidget custom-html-widget"><div class="header-emergencies">
+								<img>rohrreinigung-harrer</img>
 	<strong>24/7 Emergencies</strong><br>
 <a href="https://ssrfg.com/contact-us/" class="size140 bold800">(702) 800-7159</a>
 </div></div>						</div>
