--- a/index.html
+++ b/index.html
@@ -662,7 +662,7 @@ details + h3 {
 					<div id="header">
 						<div class="header-box-left">
 							<div class="textwidget custom-html-widget"><div class="header-emergencies">
-								<H3>Rohrreinigung-Harrer</H3>
+								<H3>Rohrreinigung Harrer</H3>
 <a href="https://ssrfg.com/contact-us/" class="size140 bold800">(702) 800-7159</a>
 </div></div>						</div>
 						<div Rohrreinigung-Harrer>
