--- a/index.html
+++ b/index.html
@@ -847,15 +847,8 @@ details + h3 {
 		<div id="footer-sidebar">
 		<div id="custom_html-6" class="widget_text widget widget_custom_html"><div class="widget_text widget-content"><div class="textwidget custom-html-widget">   
 
-<div class="social-profile-icons"><ul class=""><li class="social-facebook"><a title="Facebook" href="#" target="_blank" rel="noopener"><i class="fa fa-facebook"></i></a></li><li class="social-twitter"><a title="X" href="https://twitter.com/SSHVAC_Sanitärinstallation" target="_blank" rel="noopener"><img alt="X" src="#"></a></li>
-	<li class="social-instagram"><a title="Instagram" href="#" target="_blank" rel="noopener"><i class="fa fa-instagram"></i></a></li>
-	<li class="social-youtube"><a title="YouTube" href="#" target="_blank" rel="noopener"><i class="fa fa-youtube-play"></i></a></li></ul><div class="clear"></div></div>
 
-<div class="header-address">
-Weingartenstraße 33
-65795 Hattersheim am Main<br>
-<a href="#">All Standorte</a>
-</div></div></div></div>		</div>
+</div></div></div>		</div>
 		<div id="colophon">
         <div class="copyrights">
             <span>&copy; Copyright 2024 Rohrreinigung Harrer.</span>
